[Publish] Fix line spacing

--- a/src/index.css
+++ b/src/index.css
@@ -328,8 +328,8 @@ li::marker {
   padding-top: 2px;
   padding-bottom: 2px;
 
-  position: relative;
-  left: 16.8vw;
+  /* position: relative;
+  left: 16.8vw; */
 }
 
 .dropdown-games {
